# push_swap

./: 10th  500  Makefile  README.md  author  checker  pushchecker.sh  sh_push  testpushswap.sh  text.txt
checker_s/: CMakeLists.txt  Makefile  checker  ft_commands_checker.c  ft_game.c  ft_game_1.c  ft_game_2.c  ft_game_3.c  ft_game_4.c  ft_helpers_1.c  ft_reader.c  ft_validator.c  main.c  test
git/: config  index
git/logs/: HEAD
git/logs/refs/remotes/origin/: master
git/refs/heads/: master
libft/: Makefile
libft/ft_extra/: ft_extra.h  ft_itoa_base.c  ft_itoa_base_uintmax.c  ft_memnncpy.c  ft_strdel_begn.c  ft_strdupn.c  ft_wcharlen.c
libft/ft_printf/: ft_printf.c  ft_printf_do_d_1.c  ft_printf_do_d_2.c  ft_printf_do_oux_1.c  ft_printf_do_oux_2.c  ft_printf_do_psc.c  ft_printf_flags_1.c  ft_printf_flags_2.c  ft_printf_helpers.c  ft_printf_is.c  ft_printf_lists.c  ft_printf_parser.c  ft_printf_patterns_1.c  ft_printf_patterns_2.c  ft_printf_patterns_3.c  ft_printf_precision_1.c  ft_printf_precision_2.c  ft_printf_precision_3.c  ft_printf_precision_4.c  ft_printf_switch.c  ft_printf_wide_char.c  ft_printf_width_1.c  ft_printf_width_2.c  libftprintf.h
libft/libft/: ft_atoi.c  ft_bzero.c  ft_get_next_line.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nextchar.c  ft_prvschar.c  ft_ptrlen.c  ft_ptrtoend.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_skipchr.c  ft_skipspace_beg.c  ft_skipspace_end.c  ft_skiptochr.c  (+31 more)
push_swap_s/: CMakeLists.txt  Makefile  ft_10_b_stack_down_rotation.c  ft_11_final_a_rotation.c  ft_1_algorithm.c  ft_2_if_3_numbers.c  ft_3_if_5_numbers.c  ft_4_steps_manipulations.c  ft_5_main_functions_1.c  ft_6_index_checker.c  ft_7_alternative_checker.c  ft_8_a_stack_rotation.c  ft_9_b_stack_up_rotation.c  ft_algorithm_1.c  ft_algorithm_2.c  ft_algorithm_3.c  ft_algorithm_4.c  ft_algorithm_5.c  ft_algorithm_6.c  ft_if_algorithm_1.c  ft_operations_1.c  ft_operations_2.c  ft_operations_3.c  ft_print_stacks.c  main.c  notes.c  notes.txt
shared_s/: Makefile  ft_commands.c  ft_helpers_1.c  ft_helpers_2.c  ft_newlst_stks.c  ft_operations_1.c  ft_operations_2.c  ft_operations_3.c  ft_print_stacks.c  ft_test.c  ft_validator.c  push_swap.h
